# programming_training

./: .gitignore
BuildWithCMake/DifferentLib/: CMakeLists.txt
BuildWithCMake/DifferentLib/include/: ForLib.h  MyFunction.h  config.h  config.h.cmake
BuildWithCMake/DifferentLib/src/: MyFunction.cpp  main.cpp
Cpp/Object-oriented_programming/WeatherStation/: CMakeLists.txt  CreatTestForLib.cmake  main.cpp
Cpp/Stroustrup_principles_and_practice/: CMakeLists.txt
Cpp/Stroustrup_principles_and_practice/include/: Vector_ref.h  layout_cpp  layout_h  std_lib_facilities.h
Cpp/Stroustrup_principles_and_practice/src/: main.cpp
Cpp/WorkOnTheDifferentStuffOfCMake/: CMakeLists.txt
DifferentTasksByAlgorithms/DifferentTasksByAlgorithms/: AddAndSearchWord.cpp  CMakeLists.txt  ContainsNearbyAlmostDuplicate.cpp  ContainsNearbyAlmostDuplicate.h  HashSet.cpp  PalindromePairs.cpp  PalindromePairs.h  ReplaceWords.cpp  SearchRange.cpp  SimpleBST.cpp  TheSkylineProblem.h  findDuplicateSubtrees.cpp  kWeakestRows.cpp
Object-oriented_programming/: CMakeLists.txt  CMakeSettings.json
Object-oriented_programming/DigitalClock/: main.cpp
Object-oriented_programming/DigitalClock/include/: ClockDriver.h  MockTimeSink.h  MockTimeSource.h  Subject.h  TestClockDriver.h  TimeSource.h  TimeSourceImplimentation.h  interfaceClockObserver.h  interfaceTimeSink.h  interfaceTimeSource.h
Object-oriented_programming/DigitalClock/src/: ClockDriver.cpp  MockTimeSink.cpp  MockTimeSource.cpp  TestClockDriver.cpp  TimeSource.cpp  TimeSourceImplimentation.cpp
Object-oriented_programming/Object-oriented_programming/: CMakeLists.txt  Config.h  main.cpp
Object-oriented_programming/Object-oriented_programming/ActiveObjectEngine/: SleepCommand.h  TestSleepCommand.cpp  TestSleepCommand.h
Object-oriented_programming/Object-oriented_programming/Command/: CommandPrint.h
Object-oriented_programming/Object-oriented_programming/Factory/: Circle.h  MathConstants.cpp  ShapeFactory.cpp  ShapeFactory.h  TestShapeFactory.cpp  TestShapeFactory.h
Object-oriented_programming/Object-oriented_programming/Monostate/: Turnstile.cpp
Object-oriented_programming/Object-oriented_programming/Singleton/: TestSimpleSingleton.cpp
Object-oriented_programming/Object-oriented_programming/Strategy/: IntSortHandle.cpp  TestStrategyQuickSort.h
Object-oriented_programming/Object-oriented_programming/TemplateMethod/: TestTemplateMethodQuickSort.cpp  TestTemplateMethodQuickSort.h
Object-oriented_programming/PayrollSystem/: CMakeLists.txt  main.cpp
Object-oriented_programming/PayrollSystem/Test/: DateTest.cpp  DateTest.h  MyAssert.h  PayrollTest.cpp  PayrollTest.h
Object-oriented_programming/PayrollSystem/header/: Date.h  Paycheck.h
Object-oriented_programming/PayrollSystem/include/: Employee.h
Object-oriented_programming/PayrollSystem/source/: Date.cpp  Employee.cpp  Paycheck.cpp
Object-oriented_programming/PayrollSystemToPackages/: CMakeLists.txt
Object-oriented_programming/ProjectOfSalarySystem/: CMakeLists.txt
Object-oriented_programming/WeatherStation/: CMakeLists.txt  CreatLibFromFiles.cmake  CreatLibFromFiles_notExternalParams.cmake  CreatListSRC.cmake  CreatPackageFromFiles.cmake  CreatTestForLib.cmake  main.cpp
Object-oriented_programming/WeatherStation/include/: AlarmClock.h  AlarmListener.h  BarometricPressureObserver.h  BarometricPressureSensor.h  BarometricPressureTrendSensor.h  HiLoData.h  HiLoDataImp.h  MonitoringScreen.h  MonitoringScreenImplementation.h  Observable.h  Observer.h  ObserverMScreen.h  PersistentImp.h  Scheduler.h  StationToolkit.h  TemperatureHiLo.h  TemperatureObserver.h  TemperatureSensor.h  TemperatureSensorImp.h  TemperatureType.h  TestAlarmClockImp.h  TestBarometricPressureSensor.h  TestStationToolkit.h  TestTemperatureSensor.h  myLibMath.h
Object-oriented_programming/WeatherStation/src/: AlarmClock.cpp  AlarmClockImp.cpp  BarometricPressureSensor.cpp  MonitoringScreen.cpp  MonitoringScreenImplementation.cpp  Observable.cpp  Observer.cpp  TemperatureHiLo.cpp  TemperatureSensor.cpp  TestBarometricPressureSensor.cpp  TestStationToolkit.cpp  TestTemperatureSensor.cpp  myLibMath.cpp
Object-oriented_programming/WeatherStation/test/: TestBarometricPressureSensorTest.cpp  TestBarometricPressureSensorTest.h  TestMonitoringScreenImplementation.cpp  TestMonitoringScreenImplementation.h  TestTemperatureSensorTest.cpp  TestTemperatureSensorTest.h  UTestMath.cpp  mainTest.cpp  mainTestTemperatureSensorTest.cpp
Parallel_Programming/Parallel_Programming/: CMakeLists.txt
Parallel_Programming/Parallel_Programming/src/: main.cpp
Сpp/: CMakeLists.txt
Сpp/DifferentTasksByAlgorithms/: CMakeLists.txt  HashSet.h  MaxXORofTwoNumbersInArray.cpp  ReplaceWords.h  SimpleBST.cpp  SimplifyPath.cpp  SimplifyPath.h  SmallestDistancePair.cpp  SmallestDistancePair.h  TheSkylineProblem.cpp  WordSearch_v2.cpp  WordSearch_v2.h  findDuplicateSubtrees.h  minimumDeviation.cpp
Сpp/Object-oriented_programming/: CMakeLists.txt  Config.h
Сpp/Object-oriented_programming/Factory/: MathConstants.h  Shape.h  ShapeFactory.cpp  TestShapeFactory.cpp
Сpp/Object-oriented_programming/Monostate/: TestTurnstile.h
Сpp/Object-oriented_programming/PayrollSystem/: CMakeLists.txt
Сpp/Object-oriented_programming/PayrollSystemToPackages/: CMakeLists.txt
Сpp/Object-oriented_programming/Singleton/: SimpleSingleton.cpp  SimpleSingleton.h  TestSimpleSingleton.h
Сpp/Object-oriented_programming/Strategy/: IntSortHandle.h  TestStrategyQuickSort.cpp
Сpp/Object-oriented_programming/TemplateMethod/: TemplateMethodQuickSort.h
Сpp/Parallel_Programming/: CMakeLists.txt
Сpp/Parallel_Programming/include/: RunCommandOfExample.h
Сpp/Stroustrup_principles_and_practice/: CMakeLists.txt
Сpp/Stroustrup_principles_and_practice/include/: layout_cpp  layout_h  mock_header  mock_src  std_lib_facilities.h
Сpp/Stroustrup_principles_and_practice/src/: main.cpp
Сpp/WorkOnTheDifferentStuffOfCMake/: Test.txt
Сpp/_cmake_lib/: creat_lib_from_files.cmake  creat_list_path_to_src.cmake
(+1177 files in other folders)
