# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)
enable_testing()
project ("Object-oriented_programming")
# Include sub-projects.
# add_subdirectory ("Object-oriented_programming")
# add_subdirectory ("PayrollSystem")
# add_subdirectory ("PayrollSystemToPackages")
# add_subdirectory ("DigitalClock")
# add_subdirectory ("SystemOfShoppingBasket")
 add_subdirectory("WeatherStation")